[package]
name = "rust-windows-io"
version = "0.1.0"
authors = ["Austin Wise <AustinWise@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
windows = "0.2.1"

[dependencies]
windows = "0.2.1"

[dependencies.futures]
version = "0.3.12"
features = ["thread-pool"]
