[package]
name = "rust-windows-io"
version = "0.1.0"
authors = ["Austin Wise <AustinWise@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.9.1"
bindings = { package = "bindings", path = "../bindings" }

[dependencies.futures]
version = "0.3.12"
features = ["thread-pool"]
